[package]
name = "qiyoku"
version = "0.1.0"
authors = ["Oleksandr Piskovyi <shvrma228@gmail.com> <piskovyi1@uniba.sk>"]
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.97"
argh = "0.1.13"
colored = "3.0.0"
phf = { version = "0.11.3", features = ["macros"] }

[dev-dependencies]
tempfile = "3.19.1"
