[package]
name = "ypc"
version = "0.2.0"
authors = ["Oleksandr Piskovyi <shvrma228@gmail.com> <piskovyi1@uniba.sk>"]
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.97"
argh = "0.1.13"
ariadne = "0.5.1"
chumsky = { version = "0.10.1", features = ["pratt"] }
logos = "0.15.0"

[dev-dependencies]
tempfile = "3.19.1"
